--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ __init__.py
 static_final
 .vscode
 media
+/.idea/.gitignore
+/.idea/danstore.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
+/.idea/webResources.xml
