--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-storages==1.14.3
 djangorestframework==3.15.1
 jmespath==1.0.1
 pillow==10.3.0
+psycopg2==2.9.9
 python-dateutil==2.9.0.post0
 s3transfer==0.10.1
 six==1.16.0
